# restStatServer

./: Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.status  configure  configure.ac  restStatServer-0.1.0-1.x86_64.tar.bz2
autom4te.cache/: output.1  requests  traces.0  traces.1
include/: config.h  config.h.in  config.h.in~  headers.h
src/: restserver.cpp  systemcalls.cpp
static/: index.htm
