bin_PROGRAMS=restStatServer
restStatServer_SOURCES = src/restserver.cpp src/systemcalls.cpp
restStatServer_CFLAGS = -std=c++14 -I./include -lpistache -lpthread
restStatServerdir = $(prefix)/share/restStatServer
restStatServer_DATA = static/utils.js static/jquery.min.js static/Chart.min.js static/index.htm
